# nctop

./: INSTALL  LICENSE  MANIFEST  Makefile.in  README  config.h.in  configure  configure.in  daemon.c  daemon.h  display.c  display.h  globals.h  machine.h  nctop.1  nctop.c  nctop.conf.sample  nctopd.1  nctopd.c  nctopd.sh.in  privileges.c  privileges.h  readconfig.c  readconfig.h  readline.c  readline.h  slist.c  slist.h  udpclient.c  udpclient.h  udpserver.c  udpserver.h  utils.c  utils.h  version.h
machines/: freebsd.c  linux.c
www/: README  collectstat.pl  index.php  plotstat.pl
